--- a/src/main/resources/templates/alquileres.html
+++ b/src/main/resources/templates/alquileres.html
@@ -78,6 +78,11 @@
        href="/alquileres/logs">Ver Logs
     </a>
 </button>
+<button>
+    <a class="button1" name="volver"  style="cursor:pointer; color: #f2f2f2"
+       href="/">Volver
+    </a>
+</button>
 </body>
 </html>
 
