--- a/src/main/resources/templates/usuarioEditar.html
+++ b/src/main/resources/templates/usuarioEditar.html
@@ -6,8 +6,9 @@
     <script
             src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
     </script>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
     <style>
-        button {
+        button{
             background-color: #1b26f2;
             border: none;
             color: white;
@@ -22,11 +23,6 @@
             transition-duration: 0.4s;
         }
     </style>
-    <style>
-        body{
-            font-size: large;
-        }
-    </style>
 </head>
 
 <pre>
@@ -39,6 +35,12 @@
 
     </form>
 </pre>
+<br>
+<button>
+    <a class="button" name="volver"  style="cursor:pointer; color: #f2f2f2"
+       href="/usuarios">Volver
+    </a>
+</button>
 </body>
 </html>
 
