--- a/src/main/resources/templates/generosCrear.html
+++ b/src/main/resources/templates/generosCrear.html
@@ -8,17 +8,35 @@
     </script>
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <style>
-        body{
-            font-size: large;
+        button{
+            background-color: #1b26f2;
+            border: none;
+            color: white;
+            padding: 10px 27px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            -webkit-transition-duration: 0.4s; /* Safari */
+            transition-duration: 0.4s;
         }
     </style>
 </head>
 
-
-<form id="crearForm">
+<pre>
+    <form id="crearForm">
     Nombre: <input id="nombre" type="text" name="nombre"/><br>
-    <input type="submit" value="Submit"/>
+    <button type="submit" value="Submit">Submit</button>
+            <a class="button1" name="volver" style="cursor:pointer; color: #f2f2f2"
+               href="/peliculas/crear">Volver</a>
+
 </form>
+
+
+</pre>
+
 </body>
 </html>
 
@@ -39,9 +57,12 @@
             success: function (data, status, xhr) {
                 window.location="/peliculas/crear";
             },
-            error: function (xhr, status, error) {
-                alert(error);
-            }
+            error: function (xhr, ajaxOptions, thrownError) {
+                switch (xhr.status) {
+                    case 302:
+                        alert("Ya existe el genero")
+                }
+            },
         });
     });
 
