--- a/src/main/resources/templates/generosCrear.html
+++ b/src/main/resources/templates/generosCrear.html
@@ -27,7 +27,7 @@
 
 <pre>
     <form id="crearForm">
-    Nombre: <input id="nombre" type="text" name="nombre"/><br>
+    Nombre: <input id="nombre" type="text" pattern="^[a-zA-Z]+$" name="nombre" required/><br>
     <button type="submit" value="Submit">Submit</button>
             <a class="button1" name="volver" style="cursor:pointer; color: #f2f2f2"
                href="/peliculas/crear">Volver</a>
