--- a/src/main/resources/templates/peliculaCrear.html
+++ b/src/main/resources/templates/peliculaCrear.html
@@ -8,7 +8,7 @@
     </script>
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <style>
-        button{
+        button {
             background-color: #1b26f2;
             border: none;
             color: white;
@@ -25,34 +25,33 @@
     </style>
 </head>
 
-<pre>
-    <form id="editarForm">
-    Nombre: <input id="nombre" type="text" name="nombre" /><br>
-    Genero:
-    <select id="selectGenero" >
-        <option th:each="genero : ${generos}" th:value="${genero.idgeneros}" th:text="${genero.nombre}">genero</option>
-    </select>
-        <button type="submit" value="Submit">Submit</button>
+<body>
+    <pre>
+        <form id="crearForm">
+             Nombre: <input id="nombre" type="text" name="nombre" required/><br>
+             Genero:
+            <select id="selectGenero">
+                <option th:each="genero : ${generos}" th:value="${genero.idgeneros}"
+                        th:text="${genero.nombre}">genero</option>
+            </select>
+            <button type="submit" value="Submit">Submit</button>
 </form>
-</pre>
-<button>
-    <a class="button1" name="crear" style="cursor:pointer;color: #f2f2f2"
-       href="/generos/crear">Crear Genero</a>
-</button>
-<button>
-    <a class="button1" name="editar" style="cursor:pointer;color: #f2f2f2"
-       href="/generos/editar">Editar Genero</a>
-</button>
+    </pre>
 <br>
-<button>
-    <a class="button1" name="volver"  style="cursor:pointer; color: #f2f2f2"
-       href="/peliculas">Volver</a>
-</button>
+    <button>
+        <a class="button1" name="crear" style="cursor:pointer;color: #f2f2f2"
+           href="/generos/crear">Crear Genero</a>
+    </button>
+    <button>
+        <a class="button1" name="volver" style="cursor:pointer; color: #f2f2f2"
+           href="/peliculas">Volver</a>
+    </button>
 </body>
 </html>
 
+
 <script>
-    $("#editarForm").submit(function (event) {
+    $("#crearForm").submit(function (event) {
         event.preventDefault();
         var form = $(this);
         var url = '/peliculas';
@@ -61,7 +60,7 @@
                 "nombre": form.find('input[name="nombre"]').val(),
                 "generosByIdgenero": {
                     "idgeneros": document.getElementById('selectGenero').value,
-                    "nombre" : document.getElementById('selectGenero').textContent,
+                    "nombre": document.getElementById('selectGenero').textContent,
                 }
             }
 
