--- a/src/main/resources/templates/peliculaEditar.html
+++ b/src/main/resources/templates/peliculaEditar.html
@@ -29,11 +29,13 @@
     <form id="editarForm">
     IdPelicula:<span id="idpeli" name="idpeli" type="text" th:text="${pelicula.idpeliculas}"/><br>
     Genero:
-    <select id="selectGenero" >
-        <option th:each="genero : ${generos}" th:selected="${pelicula.generosByIdgenero.idgeneros == genero.idgeneros}" th:value="${genero.idgeneros}" th:text="${genero.nombre}">genero</option>
+    <select id="selectGenero">
+        <option th:each="genero : ${generos}" th:selected="${pelicula.generosByIdgenero.idgeneros == genero.idgeneros}"
+                th:value="${genero.idgeneros}" th:text="${genero.nombre}">genero
+        </option>
     </select>
     <br>
-    Nombre: <input id="nombre" type="text" name="nombre" th:value="${pelicula.nombre}"/><br>
+    Nombre: <input id="nombre" type="text" name="nombre" th:value="${pelicula.nombre}" required/><br>
     <button type="submit" value="Submit">Submit</button>
     </form>
 </pre>
