--- a/src/main/resources/templates/peliculas.html
+++ b/src/main/resources/templates/peliculas.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <title>Peliculas</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <style>
+        button{
+        background-color: #1b26f2;
+        border: none;
+        color: white;
+        padding: 10px 27px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;s
+        margin: 4px 2px;
+        cursor: pointer;
+        -webkit-transition-duration: 0.4s; /* Safari */
+        transition-duration: 0.4s;
+        }
+    </style>
 </head>
 
 <body>
