--- a/src/main/resources/templates/usuarioEditar.html
+++ b/src/main/resources/templates/usuarioEditar.html
@@ -16,7 +16,7 @@
             text-align: center;
             text-decoration: none;
             display: inline-block;
-            font-size: 16px;
+            font-size: 16px;s
             margin: 4px 2px;
             cursor: pointer;
             -webkit-transition-duration: 0.4s; /* Safari */
@@ -29,10 +29,9 @@
     <form id="editarForm" >
     <
         IDCliente:<span id="id" name = "id" type="text" th:text="${usuario.idcliente}"/><br>
-        Nombre: <input id="nombre" type="text" name="nombre" th:value="${usuario.nombre}"/><br>
-        DNI: <input id="dni" type="text" name="dni" th:value="${usuario.dni}"/><br>
+        Nombre: <input id="nombre" type="text" pattern="^[a-zA-Z]+$" name="nombre" th:value="${usuario.nombre}" required/><br>
+        DNI: <input id="dni" type="text" min="1" max="99999999" name="dni" th:value="${usuario.dni}" required/><br>
         <button type="submit" value="Submit">Submit</button>
-
     </form>
 </pre>
 <br>
